--- a/public/index.html
+++ b/public/index.html
@@ -14,11 +14,12 @@
     }
     img {
       width: 100%;
-      height: 15vw;
+      /* height: 15vw; */
+      height: 160px ;
       object-fit: cover;
     }
     .featured-list {
-      margin-top: -60px;
+      margin-top: -120px;
     }
   </style>
 </head>
@@ -33,26 +34,26 @@
     <div class="featured-list">
       <div class="d-flex flex-row justify-content-around mb-3">      
         <div class="card" style="width: 18rem;">
-          <img src="images/1.jpg" class="card-img-top" alt="...">
+          <img src="images/v1.jpg" class="card-img-top" alt="...">
           <div class="card-body">
-            <h5 class="card-title">Fask Mask Generator</h5>
+            <h5 class="card-title">3D Face Mask</h5>
             <p class="card-text">#3D #face #mask #전처리</p>
             <a href="pjt1/view1.html" class="btn btn-primary">데모 이동</a>
           </div>
         </div>
         <div class="card" style="width: 18rem;">
-          <img src="images/2.jpeg" class="card-img-top" alt="...">
+          <img src="images/v2.jpg" class="card-img-top" alt="...">
           <div class="card-body">
-            <h5 class="card-title">NIA Project</h5>
-            <p class="card-text">#NIA #vision #action #tagging</p>
+            <h5 class="card-title">Human Pose Labeling Tool</h5>
+            <p class="card-text">#NIA #vision #action #label</p>
             <a href="pjt2/view2.html" class="btn btn-primary">데모 이동</a>
           </div>
         </div>
         <div class="card" style="width: 18rem;">
-          <img src="images/3.jpg" class="card-img-top" alt="...">
+          <img src="images/v3.jpg" class="card-img-top" alt="...">
           <div class="card-body">
-            <h5 class="card-title">Best Practice</h5>
-            <p class="card-text">#고급 문제 해결 #자연어 #lg화학</p>
+            <h5 class="card-title">Solar Anormaly Detection</h5>
+            <p class="card-text">#고문해 #자연어 #lg전자</p>
             <a href="pjt3/view3.html" class="btn btn-primary">데모 이동</a>
           </div>
         </div>
@@ -60,10 +61,10 @@
       </div>
       <div class="d-flex flex-row justify-content-around mb-3">      
         <div class="card" style="width: 18rem;">
-          <img src="images/4.jpg" class="card-img-top" alt="...">
+          <img src="images/4.png" class="card-img-top" alt="...">
           <div class="card-body">
-            <h5 class="card-title">외부 사례 Best Practice</h5>
-            <p class="card-text">#docker #kubernetise</p>
+            <h5 class="card-title">문장 유사성 매칭</h5>
+            <p class="card-text">#docker #kubernetise #bert</p>
             <a href="pjt4/view4.html" class="btn btn-primary">데모 이동</a>
           </div>
         </div>
