--- a/public/pjt4/view4.html
+++ b/public/pjt4/view4.html
@@ -3,7 +3,6 @@
       xmlns:layout="http://www.ultraq.net.nz/thymeleaf/layout"
       layout:decorator="layout/default">
 <head>
-    
 <meta charset="UTF-8"/>
 <meta http-equiv="Content-Type" content="text/html; charset=utf-8"/>
 <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1"/>
@@ -11,26 +10,10 @@
 <META http-equiv="Pragma" content="no-cache"/>
 <META http-equiv="Pragma" content="no-store"/>
 <META http-equiv="Expires" content="-1"/>
-<!--<meta name="_csrf" th:content="${_csrf.token}"/>
-<meta name="_csrf_header" th:content="${_csrf.headerName}"/>-->
 <title>LG AI Hub</title>
 <meta name="Keywords" content="Lg Ai Hub">
 <meta name="Description" content="">
 <link rel="stylesheet" type="text/css" href="../oneclick/style.css">
-<script src="https://code.jquery.com/jquery-3.5.1.slim.min.js" integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj" crossorigin="anonymous"></script>
-<script src="https://cdn.jsdelivr.net/npm/bootstrap@4.5.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ho+j7jyWK8fNQe+A12Hb8AhRq26LrZ/JpcUGGOn+Y7RsweNrtN/tE3MoK7ZeZDyx" crossorigin="anonymous"></script>
-<!-- <script type="text/javascript" src="/hub/asset/js/plugins.js"></script>
-<script type="text/javascript" src="/hub/asset/js/jquery.tag-editor.js"></script>
-<script type="text/javascript" src="/hub/asset/js/ui.common.js"></script>
-<script type="text/javascript" src="/hub/asset/js/aihub.common.js"></script>
-<script type="text/javascript" src="/hub/asset/js/chart/Chart.min.js"></script>
-<script type="text/javascript" src="/hub/asset/js/date.js"></script>
-<script type="text/javascript" src="/hub/asset/js/chart-utils.js"></script>
-<script type="text/javascript" src="/hub/asset/js/selectize.js"></script>
-<script type="text/javascript">
-    let userInfo = {"seq":57,"loginId":"jungin00.lee@lge.com","loginType":"","billingDeptCd":"LGE001","positionName":"\uCC45\uC784","deptName":"AI\uAE30\uBC18\uAE30\uC220\uD300","compName":"LG \uC804\uC790","compCd":"LGE","userName":"\uC774\uC815\uC778","gitUserName":"jungin00.lee","gitlabUserId":13,"authorityCd":"SAU"};
-</script> -->
-
 </head>
 <body>
 <!-- skip navigation -->
@@ -120,14 +103,15 @@
                     <div style="width: 80%;">
                         <div class="resultListBox">
                             <a href="http://52.78.134.178:20080/gitlab/jungin00.lee2/bert-poc1-preprocessing" class="cont">
-                                <p class="tit" style="font-size: 24px;">BERT POC1 - Preprocessing</p>
+                                <p class="tit" style="font-size: 24px;">3D Face Mask</p>
                                 <p class="txt" style="font-size: 10px; margin-top: 0px;">http://52.78.134.178:20080/gitlab/jungin00.lee2/bert-poc1-preprocessing</p>
                             </a>
                             <div class="serchTxtArea">
-                                <a href="#" class="btnSerchTxt"><span>Others</span></a><a href="#" class="btnSerchTxt"><span>Deep learning</span></a><a href="#" class="btnSerchTxt"><span>Text</span></a><a href="#" class="btnSerchTxt"><span>Language understanding</span></a><a href="#" class="btnSerchTxt"><span>LG 전자</span></a>
+                                <a href="#" class="btnSerchTxt">
+                                    <span>Others</span></a><a href="#" class="btnSerchTxt"><span>Deep learning</span></a><a href="#" class="btnSerchTxt"><span>Text</span></a><a href="#" class="btnSerchTxt"><span>Language understanding</span></a><a href="#" class="btnSerchTxt"><span>LG AI 연구원</span></a>
                             </div>
                             <p class="tit" style="font-size: 14px;"></p>
-                            <p class="txt" id="developer">개발자: LG 전자 AI기반기술팀 이정인</p>
+                            <p class="txt" id="developer">개발자: AI 연구원 AI 플랫폼 팀 이정인</p>
                         </div>
                     </div>
                 </div>
@@ -136,7 +120,7 @@
                         <ul class="tab">
                             <li id="intro" class="on"><a href="#"><i></i>Intro<span class="blind">선택됨</span></a></li>
                             <li id="demo"><a href="#"><i></i>Demo</a></li>
-                            <li id="api"><a href="#"><i></i>API</a></li>
+                            <li id="api" style="display: none;"><a href="#"><i></i>API</a></li>
                         </ul>
                     </div>
                     <div id="intro-content" class="tabCont" style="display: block;">
@@ -146,7 +130,7 @@
                       <iframe id="demo-frame" src="http://localhost:5000/" frameborder="0"></iframe>
                     </div>
                     <div id="api-content" class="tabCont" style="display: none;">
-                      <iframe id="api-frame" src="https://codepen.io/pen" frameborder="0"></iframe>
+                      <iframe id="api-frame" src="https://app.swaggerhub.com/apis-docs/lhs009/sample_api/1.0.0" frameborder="0"></iframe>
                     </div>
                 </div>
             </div>
@@ -156,13 +140,6 @@
     <!-- //container -->
 </div>
 <!-- //wrap -->
-
-<script type="text/javascript">
-    // 팝업 오픈
-    $(function(){
-    });
-
-</script>
 <script>
 
     const intro_content = document.getElementById('intro-content');
