view1.html update

--- a/public/pjt1/view1.html
+++ b/public/pjt1/view1.html
@@ -127,7 +127,7 @@
                         <iframe id="intro-frame" src="http://localhost:3000/readme/1" frameborder="0"></iframe>
                     </div>
                     <div id="demo-content" class="tabCont" style="display: none;">
-                      <iframe id="demo-frame" src="http://localhost:5000/" frameborder="0"></iframe>
+                      <iframe id="demo-frame" src="http://5000-w5g2wogyxe15327yme2jsv44b.gcp.ainetwork.ai" frameborder="0"></iframe>
                     </div>
                     <div id="api-content" class="tabCont" style="display: none;">
                       <iframe id="api-frame" src="https://app.swaggerhub.com/apis-docs/lhs009/sample_api/1.0.0" frameborder="0"></iframe>
