view1.html update

--- a/public/pjt1/view1.html
+++ b/public/pjt1/view1.html
@@ -124,7 +124,7 @@
                         </ul>
                     </div>
                     <div id="intro-content" class="tabCont" style="display: block;">
-                        <iframe id="intro-frame" src="http://localhost:3000/readme/1" frameborder="0"></iframe>
+                        <iframe id="intro-frame" src="/readme/1" frameborder="0"></iframe>
                     </div>
                     <div id="demo-content" class="tabCont" style="display: none;">
                       <iframe id="demo-frame" src="http://5000-w5g2wogyxe15327yme2jsv44b.gcp.ainetwork.ai" frameborder="0"></iframe>
