readme spec update

--- a/public/pjt4/view4.html
+++ b/public/pjt4/view4.html
@@ -124,10 +124,10 @@
                         </ul>
                     </div>
                     <div id="intro-content" class="tabCont" style="display: block;">
-                        <iframe id="intro-frame" src="http://localhost:3000/readme/1" frameborder="0"></iframe>
+                        <iframe id="intro-frame" src="/readme/504" frameborder="0"></iframe>
                     </div>
                     <div id="demo-content" class="tabCont" style="display: none;">
-                      <iframe id="demo-frame" src="http://localhost:5000/" frameborder="0"></iframe>
+                      <iframe id="demo-frame" src="http://80-wclzwzu5s42yhvghzknix7cbx.gcp.ainetwork.ai" frameborder="0"></iframe>
                     </div>
                     <div id="api-content" class="tabCont" style="display: none;">
                       <iframe id="api-frame" src="https://app.swaggerhub.com/apis-docs/lhs009/sample_api/1.0.0" frameborder="0"></iframe>
