--- a/public/pjt2/view2.html
+++ b/public/pjt2/view2.html
@@ -124,7 +124,7 @@
                         </ul>
                     </div>
                     <div id="intro-content" class="tabCont" style="display: block;">
-                        <iframe id="intro-frame" src="http://localhost:3000/readme/1" frameborder="0"></iframe>
+                        <iframe id="intro-frame" src="/readme/499" frameborder="0"></iframe>
                     </div>
                     <div id="demo-content" class="tabCont" style="display: none;">
                       <!-- <iframe id="demo-frame" src="http://localhost:5000/" frameborder="0"></iframe> -->
@@ -185,7 +185,7 @@
         api_content.style = 'display: none';
         demo_content.style = 'display: block';
 
-        window.open("http://localhost:8080");
+        window.open("http://8080-wlwer64hrsy07ud43s5ez28lo.gcp.ainetwork.ai");
 
     }
 
