--- a/public/pjt4/view4.html
+++ b/public/pjt4/view4.html
@@ -127,7 +127,7 @@
                         <iframe id="intro-frame" src="/readme/504" frameborder="0"></iframe>
                     </div>
                     <div id="demo-content" class="tabCont" style="display: none;">
-                      <iframe id="demo-frame" src="http://80-wclzwzu5s42yhvghzknix7cbx.gcp.ainetwork.ai" frameborder="0"></iframe>
+                      <iframe id="demo-frame" src="http://80-wclzwzu5s42yhvghzknjx7cbx.gcp.ainetwork.ai/" frameborder="0"></iframe>
                     </div>
                     <div id="api-content" class="tabCont" style="display: none;">
                       <iframe id="api-frame" src="https://app.swaggerhub.com/apis-docs/lhs009/sample_api/1.0.0" frameborder="0"></iframe>
