--- a/public/pjt3/view3.html
+++ b/public/pjt3/view3.html
@@ -124,7 +124,7 @@
                         </ul>
                     </div>
                     <div id="intro-content" class="tabCont" style="display: block;">
-                        <iframe id="intro-frame" src="/readme/3" frameborder="0"></iframe>
+                        <iframe id="intro-frame" src="solar.html" frameborder="0"></iframe>
                     </div>
                     <div id="demo-content" class="tabCont" style="display: none;">
                       <iframe id="demo-frame" src="jin.html" frameborder="0"></iframe>
