--- a/public/pjt4/view4.html
+++ b/public/pjt4/view4.html
@@ -95,7 +95,7 @@
             <div class="inCont">
                 <div class="titArea" style="margin-bottom: 0px;">
                     <div class="leftArea">
-                        <h3 class="tit" style="font-size: 20px;">LG 전자 / AI기반기술팀 / 이정인 </h3>
+                        <h3 class="tit" style="font-size: 20px;">Common Computer / Devops Team </h3>
                     </div>
                 </div>
                 <div class="tblFormBox">
@@ -103,7 +103,7 @@
                     <div style="width: 80%;">
                         <div class="resultListBox">
                             <a href="http://52.78.134.178:20080/gitlab/jungin00.lee2/bert-poc1-preprocessing" class="cont">
-                                <p class="tit" style="font-size: 24px;">3D Face Mask</p>
+                                <p class="tit" style="font-size: 24px;">문장 유사성 매칭</p>
                                 <p class="txt" style="font-size: 10px; margin-top: 0px;">http://52.78.134.178:20080/gitlab/jungin00.lee2/bert-poc1-preprocessing</p>
                             </a>
                             <div class="serchTxtArea">
@@ -111,7 +111,7 @@
                                     <span>Others</span></a><a href="#" class="btnSerchTxt"><span>Deep learning</span></a><a href="#" class="btnSerchTxt"><span>Text</span></a><a href="#" class="btnSerchTxt"><span>Language understanding</span></a><a href="#" class="btnSerchTxt"><span>LG AI 연구원</span></a>
                             </div>
                             <p class="tit" style="font-size: 14px;"></p>
-                            <p class="txt" id="developer">개발자: AI 연구원 AI 플랫폼 팀 이정인</p>
+                            <p class="txt" id="developer">개발자: Common Computer Devops Team</p>
                         </div>
                     </div>
                 </div>
