--- a/public/pjt2/view2.html
+++ b/public/pjt2/view2.html
@@ -124,10 +124,22 @@
                         </ul>
                     </div>
                     <div id="intro-content" class="tabCont" style="display: block;">
-                        <iframe id="intro-frame" src="/readme/499" frameborder="0"></iframe>
+                        <br />
+                        <h3>NIA DEMO</h3>
+                        <br />
+                        <h4>&nbsp; 1. Human Pose Labeling Tool install</h4>
+                        <h4>&nbsp; 2. Usgae</h4>
+                        
+                        <br />
+                        <hr>
+                         <!-- <iframe width="420" height="345" src="https://www.youtube.com/embed/tgbNymZ7vqY">
+                        </iframe> -->
+                        <iframe width="420" height="345" src="https://www.youtube.com/embed/jv03U7zhq4M">
+                        </iframe>
                     </div>
                     <div id="demo-content" class="tabCont" style="display: none;">
-                      <!-- <iframe id="demo-frame" src="http://localhost:5000/" frameborder="0"></iframe> -->
+                        <!-- <iframe width="420" height="345" src="https://www.youtube.com/embed/tgbNymZ7vqY">
+                        </iframe> -->
                     </div>
                     <div id="api-content" class="tabCont" style="display: none;">
                       <iframe id="api-frame" src="https://app.swaggerhub.com/apis-docs/lhs009/sample_api/1.0.0" frameborder="0"></iframe>
