--- a/public/index.html
+++ b/public/index.html
@@ -63,8 +63,8 @@
         <div class="card" style="width: 18rem;">
           <img src="images/4.png" class="card-img-top" alt="...">
           <div class="card-body">
-            <h5 class="card-title">문장 유사성 매칭</h5>
-            <p class="card-text">#docker #kubernetise #bert</p>
+            <h5 class="card-title">BERT 기반 문장 유사성 판별</h5>
+            <p class="card-text">#docker #kubernetise #BERT</p>
             <a href="pjt4/view4.html" class="btn btn-primary">데모 이동</a>
           </div>
         </div>
