--- a/public/pjt4/view4.html
+++ b/public/pjt4/view4.html
@@ -103,7 +103,7 @@
                     <div style="width: 80%;">
                         <div class="resultListBox">
                             <a href="http://52.78.134.178:20080/gitlab/jungin00.lee2/bert-poc1-preprocessing" class="cont">
-                                <p class="tit" style="font-size: 24px;">BERT 기반 문장 유사성 판</p>
+                                <p class="tit" style="font-size: 24px;">BERT 기반 문장 유사성 판별</p>
                                 <p class="txt" style="font-size: 10px; margin-top: 0px;">http://52.78.134.178:20080/gitlab/jungin00.lee2/bert-poc1-preprocessing</p>
                             </a>
                             <div class="serchTxtArea">
