--- a/public/pjt3/view3.html
+++ b/public/pjt3/view3.html
@@ -120,7 +120,8 @@
                         <ul class="tab">
                             <li id="intro" class="on"><a href="#"><i></i>Intro<span class="blind">선택됨</span></a></li>
                             <li id="demo"><a href="#"><i></i>Demo</a></li>
-                            <li id="api" style="display: none;"><a href="#"><i></i>API</a></li>
+                            <!-- <li id="api" style="display: none;"><a href="#"><i></i>API</a></li> -->
+                            <li id="api"><a href="#"><i></i>API</a></li>
                         </ul>
                     </div>
                     <div id="intro-content" class="tabCont" style="display: block;">
@@ -130,7 +131,7 @@
                       <iframe id="demo-frame" src="p3demo.html" frameborder="0"></iframe>
                     </div>
                     <div id="api-content" class="tabCont" style="display: none;">
-                      <iframe id="api-frame" src="https://app.swaggerhub.com/apis-docs/lhs009/sample_api/1.0.0" frameborder="0"></iframe>
+                      <iframe id="api-frame" src="api.html" frameborder="0"></iframe>
                     </div>
                 </div>
             </div>
