--- a/public/pjt1/view1.html
+++ b/public/pjt1/view1.html
@@ -130,7 +130,7 @@
                       <iframe id="demo-frame" src="http://5000-w5g2wogyxe15327yme2jsv44b.gcp.ainetwork.ai" frameborder="0"></iframe>
                     </div>
                     <div id="api-content" class="tabCont" style="display: none;">
-                      <iframe id="api-frame" src="http://localhost:8080/docs/" frameborder="0"></iframe>
+                      <iframe id="api-frame" src="http://18.183.65.136:8080/docs/" frameborder="0"></iframe>
                     </div>
                 </div>
             </div>
